k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/profile
            pathType: Prefix
            backend:
              service:
                name: profile
                port:
                  number: 80
          - path: /api/interaction
            pathType: Prefix
            backend:
              service:
                name: interaction
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
